2002-11-26  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/text.c (text_calc_boundingbox, text_draw): Better cursor size.

2002-11-25  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/text.c (text_calc_boundingbox, text_draw): Better cursor
	positioning. 

	* app/diapsrenderer.c: Freetype rendering is back in force.

	* app/disp_callbacks.c: Added missing updates for pre-text-change.

2002-11-25  David Hoover <jazzdaq@yahoo.com>

	* app/render_libart.c: Added missing #include line for libart.

	* lib/geometry.h:
	* lib/geometry.c: Added point_convex function.  This computes
	points inside a line segment (0 <= alpha <= 1) or outside the
	line segment (alpha < 0 | alpha > 1).

	* objects/standard/line.c: Line now has additional code/attributes
	which permit the line to extend past the line anchors (gap < 0) or
	leave a gap without reaching the anchor (gap > 0).  If no gap is
	specified, the default gap of 0 will result in identical line
	behavior as before.  If the 'fractional' attributes are TRUE, the
	gap length is not fixed, but a percentage of the line length.  I
	did not know how create the GTK widgets so the gap code currently
	cannot be used without adding XML attributes by hand.

2002-11-25  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* lib/diagdkrenderer.c (draw_string): Removed timing bits.

	* lib/Makefile.am (libdia_la_SOURCES): Added fontsel files to SOURCES.

2002-11-24  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* lib/font.c: Debugging functionality in separate functions.

	* lib/widgets.c: Using fontsel with context.

	* lib/diagtkfontsel.[ch]: Context-aware copy of the GTK fontsel.

	* objects/custom/custom_object.c: Orientation handling for shapes,
	patch thanks to Martin Hans <opfinder@gmx.net>.

	* objects/standard/zigzagline.c (zigzagline_move_handle): Starting
	work on even better orientation handling.

	* app/menus.c (menus_get_item_from_path): Fixed sily warnings from