@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
 SUBDIRS = standard network UML ER FS flowchart custom GRAFCET \
-	chronogram SADT Misc #EML
+	chronogram SADT Misc bondgraph #EML
 
 ## I have disabled building the EML files, for GPL compliance reasons. Ask me
 ## why in private, if you care. -- CC.
